--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,12 @@ div.logo {
     width: 20%;
     font-size: 30px;
     text-transform: uppercase;
+    cursor: pointer;
+    transition: .2s;
+}
+
+div.logo:hover {
+    color: darkgreen;
 }
 
 ul {
@@ -56,8 +62,12 @@ ul li a {
     margin-right: 80px;
     color: aliceblue;
     text-transform: uppercase;
+    transition: .2s;
 }
 
+ul li a:hover {
+    color: green;
+}
 
 
 .bg {
